<resources>
    <string name="app_name">Tweety search</string>
    <string name="search_query_hint_msg">Words to search</string>
    <string name="search_by_location_desc">Search by location</string>
    <string name="search_by_recent_desc">Search by recent</string>
    <string name="search_by_popular_desc">Search by populars</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently_searched_title_txt">Recently searched</string>
    <string name="search_text">Search</string>
    <string name="avatar_image_desc">User avatar</string>
    <string name="recent_text">Recent</string>
    <string name="popular_text">Popular</string>
    <string name="try_again">Try again</string>
    <string name="noconnection_text_error">Can\'t load search results</string>
    <string name="no_connection_pic">No connection</string>
    <string name="empty_list_text_error">No tweets found</string>
    <string name="delete_button_desc">Delete button</string>
    <string name="searched_result_hint">Do a search to see results</string>
    <string name="search_desc">Search icon</string>
    <string name="search_clear_desc">Clear query</string>

    <string name="search_text_empty_error">Please write a word to search</string>
    <string name="search_text_exceeded_error">Please write less of 10 words</string>
    <string name="search_text_complexity_error">Too complex to analyze, please re-write</string>
    <string name="empty_image_desc">Empty bird cage</string>
    <string name="tweet_pic_trans_name">tweetPicture</string>
    <string name="searched_text_trans_name">searchedText</string>
    <string name="login_failed_error_msg">Login failed</string>
    <string name="login_required_error_msg">You must to be logged in for searching</string>
    <string name="login">Login</string>
    <string name="authentication_in_progress">Authentication in progress, please wait</string>
    <string name="search_input_tutorial">Separated comma words</string>
</resources>
