<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme.MarginPoint"
    android:orientation="vertical"
    tools:context="com.gemapps.tweetysearch.ui.mainsearch.MainSearchFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.gemapps.tweetysearch.ui.widget.search.SearchChipView
                    android:id="@+id/word_search_view"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/query_search_button"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/search_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.gemapps.tweetysearch.ui.widget.ResultTypeButtonSelectable
                    android:id="@+id/recent_search_button"
                    style="@style/BorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/search_by_recent_desc"
                    android:drawableTop="@drawable/recent_selector_bg"
                    android:text="@string/recent_text"
                    app:search_type="recent"/>

                <com.gemapps.tweetysearch.ui.widget.ResultTypeButtonSelectable
                    android:id="@+id/popular_search_button"
                    style="@style/BorderlessButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/search_by_popular_desc"
                    android:drawableTop="@drawable/popular_selector_bg"
                    android:text="@string/popular_text"
                    app:search_type="popular"/>

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/recently_searched_title_txt"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.gemapps.tweetysearch.ui.widget.EmptyView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:emptyTitle="No history"
            app:emptyMessage="Do some search to see content here"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recently_searched_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/recently_searched_item_list"/>


    </FrameLayout>

</LinearLayout>
